# cs6120

assa10/: Makefile.mak  (+10 more)
assa7/: CMakeLists.txt  FloatDivLogger.dylib  FloatDivOpt.dylib  Makefile  README.md  after.ll  after_fast.ll  after_opt.ll  before.ll  before_fast.ll  bench_O0_opt  bench_O0_orig  bench_O1_orig  bench_O2_orig  benchmark.c  benchmark_O0.ll  benchmark_O0_opt.ll  benchmark_O1.ll  benchmark_O1_opt.ll  benchmark_O2.ll  run_benchmarks.sh  test.c  test_app  visualize_results.py
assa7/src/: FloatDivLogger.cpp  FloatDivOptPass.cpp
project/: CLAUDE.md  CMakeLists.txt  FILES.txt  LoopParallelizationPass.dylib  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  run_benchmarks.sh  run_polybench.sh  run_tests.sh  visualize_polybench.py  visualize_results.py
project/blog/: report-automatic-loop-parallelization.md
project/output/: bench_orig  bench_parallel  bench_serial  benchmark_parallel.ll  manual_parallel  test_simple.ll  test_simple_parallel.ll  verify.ll  verify_parallel  verify_parallel.ll  verify_serial
project/polybench_output/: 2mm_parallel  2mm_parallel.ll  2mm_serial  3mm_parallel  3mm_parallel.ll  3mm_serial  adi_parallel  adi_parallel.ll  adi_serial  atax_parallel  atax_parallel.ll  atax_serial  bicg_parallel  bicg_parallel.ll  bicg_serial  cholesky_parallel  cholesky_parallel.ll  cholesky_serial  correlation.ll  correlation_parallel  correlation_parallel.ll  correlation_serial  covariance_parallel  covariance_parallel.ll  covariance_serial  deriche_parallel  deriche_parallel.ll  deriche_serial  doitgen.ll  doitgen_parallel  doitgen_parallel.ll  doitgen_serial  durbin.ll  durbin_parallel  durbin_parallel.ll  durbin_serial  fdtd-2d.ll  fdtd-2d_parallel  fdtd-2d_parallel.ll  fdtd-2d_serial  (+62 more)
project/polybench_results/: 2mm.ll  2mm_fusion_parallel  2mm_fusion_parallel.ll  2mm_fusion_shared_parallel  2mm_original_parallel  2mm_serial  3mm.ll  3mm_fusion_parallel  3mm_fusion_shared_parallel  3mm_original_parallel  3mm_original_parallel.ll  3mm_serial  adi.ll  adi_fusion_parallel  adi_fusion_shared_parallel  adi_fusion_shared_parallel.ll  adi_original_parallel  adi_serial  atax.ll  atax_fusion_parallel  atax_fusion_parallel.ll  atax_fusion_shared_parallel  atax_original_parallel  atax_serial  bicg.ll  bicg_fusion_parallel  bicg_fusion_shared_parallel  bicg_original_parallel  bicg_original_parallel.ll  bicg_serial  cholesky.ll  cholesky_fusion_parallel  cholesky_fusion_shared_parallel  cholesky_original_parallel  cholesky_original_parallel.ll  cholesky_serial  correlation_fusion_parallel  correlation_fusion_shared_parallel  correlation_fusion_shared_parallel.ll  (+133 more)
(+79 files in other folders)
